[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resolve-assist"
version = "0.5.0"
description = "動画編集補助ツール (Resolve/FCP/Premiere): 無音カット・フィラー検出・シーン検出・字幕生成"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
# 文字起こし(字幕生成・フィラー検出)を使う場合
transcribe = ["faster-whisper>=1.0"]
# シーン検出を使う場合
scenes = ["scenedetect[opencv]>=0.6"]
# 字幕の自然な改行 (BudouX, Apache-2.0)
subtitles = ["budoux>=0.6"]
# 精密な発話区間検出 (Silero VAD, MIT)。torch を含むため大きい
vad = ["silero-vad>=5.1"]
# 全部入り (VAD は torch を含むため full には入れない)
full = [
    "faster-whisper>=1.0",
    "scenedetect[opencv]>=0.6",
    "budoux>=0.6",
]
dev = ["pytest>=7", "budoux>=0.6"]

[project.scripts]
resolve-assist = "resolve_assist.cli:main"
resolve-assist-gui = "resolve_assist.gui.app:main"

[tool.setuptools.packages.find]
include = ["resolve_assist*"]
